--- a/JavaScript/4-5.JS_Node.js.md
+++ b/JavaScript/4-5.JS_Node.js.md
@@ -438,6 +438,185 @@ app.get("/articles/:id", (req, res) => {
 
 <br/>
 
+### Request 객체
+
+* req.body : 요청 바디를 적절한 형태의 자바스크립트 객체로 변환하여 이곳에 저장됩니다.<br/>
+  (body-parser 미들웨어에 의해 처리됩니다.)<br/>
+* req.ip : 요청한 쪽의 IP
+* req.params : route parameter
+* req.query : query string 이 객체로 저장됩니다.
+
+<br/>
+
+### Reponse 객체
+
+* res.status(...) : 응답의 상태 코드를 지정하는 메소드
+* res.append(...) : 응답의 헤더를 지정하는 메소드
+* res.send(...) : 응답의 바디를 지정하는 메소드<br/>
+  인자가 텍스트면 text/html, 객체면 application/json 타입으로 응답<br/>
+
+<br/>
+
+### Express 실습 - glitch 사용
+
+```js
+onst express = require('express');
+const bodyParser = require('body-parser');
+
+const app = express();
+app.enable('trust proxy');
+app.use(bodyParser.json());
+
+
+// GET method
+app.get('/', (req, res) => {
+  res.send('Hello, Express!')
+});
+
+// POST method
+app.post('/', (req, res) => {
+  /*
+  Mission:
+  요청의 바디에 실려 온 JSON에 name이라는 속성이 있으면 해당 값을 이용해 응답하고, 없으면 400 Bad Request를 응답한다.
+  응답 형태는 'Hello, <name>!' 으로 한다.
+  */
+  if (req.body.name) {
+  res.send(`Hello, ${req.body.name}!`);
+  } else {
+    res.status(400);
+    res.send('400 Bad Request');
+  }
+});
+
+// query parameter, res.status
+app.get('/add', (req, res) => {
+  /*
+  Mission:
+  query parameter에 x와 y라는 이름을 가진 두 값을 정수로 바꾸어서 더한 후 응답한다.
+  값을 정수로 바꿀 수 없다면 400 Bad Request로 응답한다.
+  */
+  req.query.x = parseInt(req.query.x);
+  req.query.y = parseInt(req.query.y);
+   if (Number.isInteger(req.query.x) && Number.isInteger(req.query.y)) {
+    res.send({sum: req.query.x+ req.query.y});
+  } else {
+    res.status(400);
+    res.send('400 Bad Request')
+  }
+})
+
+// req.ip
+app.get('/ip', (req, res) => {
+  /*
+  Mission:
+  요청한 쪽의 ip를 응답한다.
+  */
+  res.send(req.ip);
+});
+
+// req.get, res.set, res.end
+app.get('/header', (req, res) => {
+  /*
+  Mission:
+  요청의 X-Custom-Header 헤더를 그대로 응답에 포함시켜 응답한다.
+  응답에는 바디를 포함시키지 않도록 한다.
+
+  hint 1: req.get 메소드는 요청에 포함된 특정 헤더의 값을 가져온다.
+  예) req.get('X-Custom-Header')
+
+  hint 2: res.set 메소드는 응답에 새로운 헤더를 지정한다.
+  예) res.set('X-Custom-Header', value)
+
+  hint 3: res.end 메소드는 응답을 보낸다. res.send와 비슷하지만, 아무런 인자도 받지 않는다.
+  */
+
+  res.set('X-Custom-Header', req.get('X-Custom-Header'));
+  res.end();
+});
+
+const listener = app.listen(process.env.PORT, function () {
+  console.log('listening on port ' + listener.address().port);
+});
+```
+
+<br/><br/>
+
+## Template Language
+
+* 템플릿과 데이터를 결합해 문서를 생성하는 프로그램 혹은 라이브러리
+* 템플릿을 작성할 때 사용하는 언어를 템플릿 언어라고 합니다.
+
+<br/>
+
+### EJS (Embedded JavaScript Template)
+
+* Node.js 생태계에서 가장 많이 사용되는 템플릿 엔진
+* JavaScript 코드를 템플릿 안에서 그대로 쓸 수 있음
+
+<br/>
+
+### EJS Syntax
+
+* 템플릿 태그
+
+  * <%...%> : 템플릿의 구조를 제어하기 위해 사용하며, 문자열을 내놓지 않습니다.
+  * <%...%> : 내부의 식을 문자열로 변환해 HTML 문서 안에 삽입합니다.
+  * <%#...%> : EJS 주석입니다. HTML 주석과는 다르게 아예 HTML 문서에 포함되지 않습니다.
+
+* HTML Escaping
+
+  데이터를 HTML 에 삽입하는 <%= ... %> 템플릿 태그는 <, > 두 문자를 각각 &lt;, &gt;로 변환하여 HTML 에 삽입합니다.<br/>
+  결과적으로 HTML 태그를 직접 템플릿에 삽입하지 못하게 막습니다.<br/>
+  이렇게 하는 이유는 보안 때문으로, XSS(Cross-site Scripting)를 당할 위험을 줄여줍니다.<br/>
+  <br/>
+
+  <%- ... %> 템플릿 태그를 이용하면 HTML escape 를 생략할 수 있으나,<br/>
+  아주 특별한 경우가 아니면 <%= ... %> 태그를 사용하기를 권장합니다.<br/>
+
+```html
+<%# 주석입니다 %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="/static/index.css">
+  </head>
+  <body>
+    <% if (name) { %>
+      <p>당신의 이름은 <%= name %>입니다.</p>
+    <% } else { %>
+      <p>이름이 주어지지 않았습니다. query parameter에 name을 추가해보세요.</p>
+    <% } %>
+    <hr>
+    <h1>List</h1>
+    <ul>
+      <% items.forEach(item => { %>
+        <li><%= item %></li>
+      <% }) %>
+    </ul>
+    <% if (showSecret) { %>
+      <p>my secret is: <%= secret %></p>
+    <% } %>
+  </body>
+</html>
+```
+
+<br/>
+
+### 파일을 그대로 제공하기
+
+```js
+// 'public' 폴더에 있는 파일을 '/static' 경로 아래에서 제공
+app.use("/static", express.static("public"));
+```
+
+```html
+<!--템플릿 파일에서 참조할 수 있음-->
+<link rel="stylesheet" href="/static/index.css">
+<script type="text/javascript" src="/static/index.js"></script>
+```
+
+<br/><br/>
+
 # 2. Today I Found Out
 
 ```
