--- a/JavaScript/4-5.JS_Node.js.md
+++ b/JavaScript/4-5.JS_Node.js.md
@@ -313,7 +313,8 @@ decodeURIComponent("%ED%95%9C%EA%B8%80");
   * 4xx : 실패 - 클라이언트 책임
 
     * 400 Bad Request : 요청의 형태가 잘못되어 응답할 수 없습니다.
-    * 403 Forbidden : 요청한 자료에 접근할 권한이 없습니다.
+    * 401 Unauthorized : 인증이 되지 않았습니다.
+    * 403 Forbidden : 요청한 자료에 접근할 권한이 없습니다. (인가가 되지 않았습니다.)
     * 404 Not Found : 요청한 자료가 없습니다.
 
   * 5xx : 실패 - 서버 책임
@@ -335,6 +336,7 @@ decodeURIComponent("%ED%95%9C%EA%B8%80");
   * Location : 301, 302 응답에서 자료의 위치
   * Accept : 요청이 어떤 형태의 자료를 원하는지 나타냅니다.
   * Content-Type : 요청 혹은 응답이 어떤 형태의 자료인지 나타냅니다.
+    [ex] content-type : application/json;charset=UTF-8
 
     * Accept, Content-Type 에서 사용되는 Mime Type
       <img src="./../image/mimeType.jpg" width="500">
